kind of overflow fixed

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   min-width: 1350px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .leftWeatherContainer {
@@ -30,7 +30,6 @@
 .bottomContainer {
   flex-grow: 1;
   display: flex;
-  overflow-y: hidden;
 }
 
 .additionalContainer {
