--- a/src/components/RightBottomContainer/RightBottomContainer.module.css
+++ b/src/components/RightBottomContainer/RightBottomContainer.module.css
@@ -4,7 +4,6 @@
   position: absolute;
   right: 0;
   padding-left: 15px;
-  padding-bottom: 20px;
   width: 300px;
   display: flex;
   flex-direction: column;
