--- a/src/routes/Home/Home.module.css
+++ b/src/routes/Home/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   display: flex;
   justify-content: space-between;
   width: 100%;
